--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,17 @@
-{
-    "version": 2,
-    "builds": [
-      {
-        "src": "app.js",
-        "use": "@vercel/node"
+
+
+  {
+    "name": "my-nodejs-app",
+    "version": "1.0.0",
+    "scripts": {
+      "start": "node index.js"
     
-      }
-    ]
+    },
+    "dependencies": {
+      "express": "^4.18.2"
+    },
+    "engines": {
+      "node": "18.x"
+    }
   }
   
