--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,19 @@
 
 
-  {
-    "name": "my-nodejs-app",
-    "version": "1.0.0",
-    "scripts": {
-      "start": "node index.js"
-    
-    },
-    "dependencies": {
-      "express": "^4.18.2"
-    },
-    "engines": {
-      "node": "18.x"
-    }
-  }
+
   
+{
+    "version": 2,
+    "builds": [
+      {
+        "src": "index.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/"
+      }
+    ]
+  }
